--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".ui.activities.AuthActivity"
+            android:name=".ui.activities.OnboardingActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
