--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".ui.activities.OnboardingActivity"
+            android:name=".ui.activities.AuthActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -56,6 +56,10 @@
             android:name=".ui.activities.ShoppingListActivity"
             android:exported="false"
             android:parentActivityName=".ui.activities.MainActivity" />
+
+        <activity android:name=".ui.activities.RegisterActivity"
+            android:exported="false" />
+
 
     </application>
 
