--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,6 +60,11 @@
         <activity android:name=".ui.activities.RegisterActivity"
             android:exported="false" />
 
+        <activity
+            android:name=".ui.activities.ReceiptScannerActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Material3.DayNight.NoActionBar" />
+
 
     </application>
 
